--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Node.js
+node_modules/
+dist/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -73,6 +77,8 @@ dmypy.json
 # Claude Code guidance (local only)
 CLAUDE.md
 
-# Exclude documentation (for now)
+# Exclude documentation and other dev folders (for now)
 Docs/
 1_spec_phase_one.md
+dev_log.md
+investigations/
